Made run configurations for Java 9+.