@@ -9,7 +9,6 @@ rem 2. program arguments (optional, if . set to default value)
 rem -----------------------------
 
 set RUNDIR=%~dp0
-set TOOLS_PATH=%JAVA_HOME%\lib\tools.jar
 
 rem --- When connecting application instance having basic JMX implementation, e.g. ordinary Java app, Tomcat, Kafka
 set MODULE_SET=core
@@ -28,8 +27,14 @@ for %%a in (%MODULE_SET%) do (
 )
 rem echo %LIBPATH%
 
-set LIBPATH=%LIBPATH%;%RUNDIR%..\lib\*;%TOOLS_PATH%
-set TNT4JOPTS="-Dtnt4j.dump.on.vm.shutdown=true" "-Dtnt4j.dump.on.exception=true" "-Dtnt4j.dump.provider.default=true"
+set LIBPATH=%LIBPATH%;%RUNDIR%..\lib\*
+
+for /f tokens^=2-5^ delims^=.-_^" %%j in ('%JAVA_HOME%\bin\java -fullversion 2^>^&1') do set "jver=%%j%%k"
+
+IF %jver% GTR 18 set TNT4JOPTS="--add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED" "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED"
+IF %jver% LEQ 18 set LIBPATH=%LIBPATH%;%JAVA_HOME%\lib\tools.jar
+
+set TNT4JOPTS=%TNT4JOPTS% "-Dtnt4j.dump.on.vm.shutdown=true" "-Dtnt4j.dump.on.exception=true" "-Dtnt4j.dump.provider.default=true"
 IF ["%TNT4J_PROPERTIES%"] EQU [""] set TNT4J_PROPERTIES="%RUNDIR%..\config\tnt4j.properties"
 set TNT4JOPTS=%TNT4JOPTS% "-Dtnt4j.config=%TNT4J_PROPERTIES%"
 IF ["%LOG4J_PROPERTIES%"] EQU [""] set LOG4J_PROPERTIES="%RUNDIR%..\config\log4j.properties"
@@ -40,7 +45,7 @@ rem ---- AppServer identifies source ----
 if "%TNT4J_APPSERVER%"=="" set TNT4J_APPSERVER=Default
 if not "%2"=="" if not "%2"=="." set TNT4J_APPSERVER=%2
 shift /2
-set TNT4JOPTS=%TNT4JOPTS% "-Dfile.encoding=UTF-8 -Dsjmx.serviceId=%TNT4J_APPSERVER%"
+set TNT4JOPTS=%TNT4JOPTS% "-Dfile.encoding=UTF-8" "-Dsjmx.serviceId=%TNT4J_APPSERVER%"
 rem -------------------------------------
 
 rem ---- Agent arguments ----
