@@ -10,7 +10,7 @@
 regex="(-(test|sources|javadoc|all)\.jar|jar.asc)$"
 should_include_file() {
   file=$1
-  if [ -z "$(echo "$file" | egrep "$regex")" ] ; then
+  if [[ -z "$(echo "$file" | egrep "$regex")" ]] ; then
     return 0
   else
     return 1
@@ -22,8 +22,6 @@ if command -v realpath >/dev/null 2>&1; then
 else
     SCRIPTPATH=$( cd "$(dirname "$0")" ; pwd -P )
 fi
-
-TOOLS_PATH="$JAVA_HOME/lib/tools.jar"
 
 ### --- When connecting application instance having basic JMX implementation, e.g. ordinary Java app, Tomcat, Kafka
 MODULE_SET=("core")
@@ -41,7 +39,7 @@ do
   for file in "$SCRIPTPATH"/../tnt4j-stream-jmx-"$module"*.jar;
   do
     if should_include_file "$file"; then
-      if [ -z "$LIBPATH" ] ; then
+      if [[ -z "$LIBPATH" ]] ; then
           LIBPATH="$file"
       else
           LIBPATH="$LIBPATH":"$file"
@@ -52,17 +50,27 @@ done
 echo "$LIBPATH"
 
 
-LIBPATH="$LIBPATH:$SCRIPTPATH/../lib/*:$TOOLS_PATH"
-TNT4JOPTS="-Dtnt4j.dump.on.vm.shutdown=true -Dtnt4j.dump.on.exception=true -Dtnt4j.dump.provider.default=true"
+LIBPATH="$LIBPATH:$SCRIPTPATH/../lib/*"
+
+jver=$("$JAVA_HOME/bin/java" -fullversion 2>&1 | sed -n ';s/.* version "\(.*\)\.\(.*\)\..*"/\1\2/p;')
+
+if [[ $jver -gt 18 ]]; then
+  TNT4JOPTS="--add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED"
+else
+  TOOLS_PATH="$JAVA_HOME/lib/tools.jar"
+  LIBPATH="$LIBPATH:$TOOLS_PATH"
+fi
+
+TNT4JOPTS="$TNT4JOPTS -Dtnt4j.dump.on.vm.shutdown=true -Dtnt4j.dump.on.exception=true -Dtnt4j.dump.provider.default=true"
 
 ### --- tnt4j file ----
-if [ -z "$TNT4J_PROPERTIES" ]; then
+if [[ -z "$TNT4J_PROPERTIES" ]]; then
   TNT4J_PROPERTIES="$SCRIPTPATH/../config/tnt4j.properties"
 fi
 TNT4JOPTS="$TNT4JOPTS -Dtnt4j.config=$TNT4J_PROPERTIES"
 ### -------------------
 ### --- log4j file ----
-if [ -z "$LOG4J_PROPERTIES" ]; then
+if [[ -z "$LOG4J_PROPERTIES" ]]; then
   LOG4J_PROPERTIES="$SCRIPTPATH/../config/log4j.properties"
 fi
 TNT4JOPTS="$TNT4JOPTS -Dlog4j.configuration=file:$LOG4J_PROPERTIES"
@@ -71,31 +79,31 @@ TNT4JOPTS="$TNT4JOPTS -Dlog4j.configuration=file:$LOG4J_PROPERTIES"
 ### -------------------------------
 
 ### ---- AppServer identifies source ----
-if [ -z "$TNT4J_APPSERVER" ]; then
+if [[ -z "$TNT4J_APPSERVER" ]]; then
     TNT4J_APPSERVER="Default"
 fi
-if [ "x$3" != "x" ] && [ "x$3" != "x." ]; then
+if [[ "x$3" != "x" ]] && [[ "x$3" != "x." ]]; then
     TNT4J_APPSERVER="$3"
 fi
 TNT4JOPTS="$TNT4JOPTS -Dfile.encoding=UTF-8 -Dsjmx.serviceId=$TNT4J_APPSERVER"
 ### -------------------------------------
 
 ### ---- Agent arguments ----
-if [ -z "$TNT4J_AGENT_ARGS" ]; then
+if [[ -z "$TNT4J_AGENT_ARGS" ]]; then
 ### use this when streaming to AutoPilot
 #    TNT4J_AGENT_ARGS="-slp:compositeDelimiter=\\"
 ### use this when streaming to jKool
     TNT4J_AGENT_ARGS="-slp:compositeDelimiter=_"
 fi
-if [ "x$4" != "x" ] && [ "x$4" != "x." ]; then
+if [[ "x$4" != "x" ]] && [[ "x$4" != "x." ]]; then
     TNT4J_AGENT_ARGS="$4"
 fi
 ### -------------------------
 
-if [ "$JAVA_HOME" == "" ]; then
+if [[ "$JAVA_HOME" == "" ]]; then
   echo '"JAVA_HOME" env. variable is not defined!..'
 else
-  echo 'Will use java from: "$JAVA_HOME"'
+  echo 'Will use java from:' "$JAVA_HOME"
 fi
 
 "$JAVA_HOME/bin/java" $TNT4JOPTS -classpath "$LIBPATH" com.jkoolcloud.tnt4j.stream.jmx.SamplingAgent -connect -f:$1 $TNT4J_AGENT_ARGS
